# duplicator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
duplicator/: admin.py  models.py
duplicator/templates/admin/duplicator/: change_form.html
duplicator/tests/: test_models.py
